--- a/addressbar.html
+++ b/addressbar.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html><html><head><meta charset="UTF-8">
 </head>
 <body>
-  <form action="javascript:gs('https://www.bing.com/search?q=')">
-  <input type="text" name=q style="width:100%" autofocus></form>
+  <input type="text" style="width:100%" autofocus>
 </body></html>
