mv fs.readFile() calls

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <body>
   <form action="javascript:handleQuery(getQ())">
   <datalist id="autoc"></datalist>
-  <input type="text" list="autoc" name=q style="width:100%"></form>
+  <input type="text" list="autoc" name=q style="width:100%" autofocus></form>
   <div class="webviews">
   <webview class="curWV"></webview>
   </div>
