add allowpopups for webviews

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   }
   function newTab(){
     var tab = document.createElement('webview');
+    tab.allowpopups = true;
     tabs.appendChild(tab);
   }
   function tabInc(num){
@@ -112,7 +113,7 @@
   <datalist id="autoc"></datalist>
   <input type="text" list="autoc" name=q style="width:100%" autofocus></form>
   <div class="webviews">
-  <webview class="curWV"></webview>
+  <webview class="curWV" allowpopups></webview>
   </div>
   <script>
     tabs = document.body.children[1];
