--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
   let lastKeyPressed;
   let lastKeyPressed_millis = 0;
   function switchTab(i){
-    tabs.children[iTab].classList.remove('curWV');
+    let tab = tabs.children[iTab];
+    if(document.activeElement == tab) tab.blur();
+    tab.classList.remove('curWV');
     iTab = i;
     tabs.children[iTab].classList.add('curWV');
   }
@@ -51,7 +53,9 @@
   function tabClose(){
     let nTabs = tabs.children.length;
     if(nTabs<2) return "";//no remain tab
-    tabs.removeChild(tabs.children[iTab]);
+    let tab = tabs.children[iTab];
+    if(document.activeElement == tab) tab.blur();
+    tabs.removeChild(tab);
     nTabs--;
     if(iTab>=nTabs) iTab=iTab-1;
     tabs.children[iTab].classList.add('curWV');
