--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
     tabs.children[iTab].printToPDF(options)
       .then(u8array=>save(filePath,u8array));
   }
+  function bookmark(args){//b [filenamestem] url title :bookmark
+    let bmFileName = "bookmark.rec";
+    let tab = tabs.children[iTab];
+    let url = tab.getURL();
+    if(args.length>1)
+      bmFileName = args[1]+".rec";
+    let title = tab.getTitle();
+    let line = title + " " + url + "\n";
+    fs.appendFile(path.join(__dirname,bmFileName), line, (err)=>{});
+  }
   function switchTab(i){
     let tab = tabs.children[iTab];
     if(document.activeElement == tab) tab.blur();
@@ -184,20 +194,18 @@
     return defaultSE+query;
   }
   function coloncommand(q){
-    if(98==q.charCodeAt(1) &&
-       (2==q.length || 32==q.charCodeAt(2))){ //":b [filename]" for bookmark
-      let tab = tabs.children[iTab];
-      q= q+ " " + tab.getURL() + " " + tab.getTitle();
-    }
     document.title = q;
   }
   function coloncommand_render(cmd){
     args = cmd.substring(1).split(/\s+/);
     switch(args[0]){
-    case "Bml":
+    case "b":
+      bookmark(args);
+      return;
+    case "bml":
       bml(args);
       return;
-    case "Pdf":
+    case "pdf":
       savePdf(args);
       return;
     }
@@ -251,7 +259,7 @@
         return;
       case 58://':'
         let c1=q.charCodeAt(1);
-        if(c1>=97)
+        if(c1!=98 && 112!=c1)
           coloncommand(q);
         else
           coloncommand_render(q);
